# playground_server_sent_events

./: README.md
log_tailer/: Makefile  pyproject.toml  server.py  setup.cfg
log_tailer/static/: index.js
log_tailer/templates/: index.html
log_tailer_htmx/: .gitignore  Makefile  package-lock.json  package.json  pyproject.toml  server.py
log_tailer_htmx/static/: sse.js
log_tailer_htmx/templates/: index.html
