[tool.poetry]
name = "log_tailer"
version = "0.1.0"
description = ""
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
pycodestyle = "^2.6.0"
pylint = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
