[tool.poetry]
name = "log_tailer"
version = "0.1.0"
description = ""
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
Flask = ">=2.3.2"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
pycodestyle = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
